modified ML assignments

--- a/ML/Assignment_2b.ipynb
+++ b/ML/Assignment_2b.ipynb
@@ -1,8 +1,19 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Name : Mrunmayee Sandeep Damle <br>\n",
+    "T.Y B.Tech CSBS <br>\n",
+    "Roll no : 11 <br>\n",
+    "\n",
+    "Assignment 2 (B) - Multiple Regression"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,16 +29,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv(r'C:\\Users\\admin\\Desktop\\TY_11\\train.csv')"
+    "df = pd.read_csv(r'D:\\my stuff\\Coding\\ML\\train.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -75,7 +86,7 @@
        "[29451 rows x 12 columns]>"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -86,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -254,7 +265,7 @@
        "max             30000.000000  "
       ]
      },
-     "execution_count": 68,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -265,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -274,7 +285,7 @@
        "np.int64(0)"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -285,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -294,7 +305,7 @@
        "np.int64(0)"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -305,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -314,7 +325,7 @@
        "np.int64(0)"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -325,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -334,7 +345,7 @@
        "np.int64(0)"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -345,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -354,7 +365,7 @@
        "np.int64(0)"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -365,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -374,7 +385,7 @@
        "np.int64(0)"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -385,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -394,7 +405,7 @@
        "np.int64(0)"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -405,7 +416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -414,7 +425,7 @@
        "np.int64(0)"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -425,7 +436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -434,7 +445,7 @@
        "np.int64(0)"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -445,7 +456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -454,7 +465,7 @@
        "np.int64(0)"
       ]
      },
-     "execution_count": 78,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -465,7 +476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -474,7 +485,7 @@
        "np.int64(0)"
       ]
      },
-     "execution_count": 79,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -485,7 +496,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -494,7 +505,7 @@
        "np.int64(0)"
       ]
      },
-     "execution_count": 80,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -505,7 +516,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -514,7 +525,7 @@
        "array([2, 1, 0])"
       ]
      },
-     "execution_count": 81,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -529,7 +540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -549,7 +560,7 @@
        "Name: POSTED_BY, Length: 29451, dtype: int64"
       ]
      },
-     "execution_count": 82,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -560,7 +571,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -569,7 +580,7 @@
        "array([0, 1])"
       ]
      },
-     "execution_count": 83,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -581,7 +592,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -590,7 +601,7 @@
        "array([2844, 6576, 2256, ..., 6897, 1629, 1510], shape=(6899,))"
       ]
      },
-     "execution_count": 95,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -602,7 +613,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -869,7 +880,7 @@
        "TARGET(PRICE_IN_LACS) -0.016178  -0.031112 -0.017254               1.000000  "
       ]
      },
-     "execution_count": 96,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -880,7 +891,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -889,7 +900,7 @@
        "<Axes: >"
       ]
      },
-     "execution_count": 98,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -910,17 +921,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
-    "x = df[['SQUARE_FT', 'ADDRESS']]\n",
+    "x = df[['SQUARE_FT', 'ADDRESS', 'UNDER_CONSTRUCTION', 'BHK_NO.']]\n",
     "y = df[['TARGET(PRICE_IN_LACS)']]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -929,7 +940,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -939,7 +950,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -948,16 +959,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "19.26049060554942"
+       "7.873237383784726"
       ]
      },
-     "execution_count": 106,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -968,16 +979,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.12368393868779326"
+       "0.13572690284070943"
       ]
      },
-     "execution_count": 107,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1003,7 +1014,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.8"
+   "version": "3.13.2"
   }
  },
  "nbformat": 4,
