--- a/ML/assignment_1.ipynb
+++ b/ML/assignment_1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,48 +22,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "<bound method DataFrame.info of         Id  Area  Bedrooms  Bathrooms  Floors  YearBuilt  Location  Condition  \\\n",
-       "0        1  1360         5          4       3       1970  Downtown  Excellent   \n",
-       "1        2  4272         5          4       3       1958  Downtown  Excellent   \n",
-       "2        3  3592         2          2       3       1938  Downtown       Good   \n",
-       "3        4   966         4          2       2       1902  Suburban       Fair   \n",
-       "4        5  4926         1          4       2       1975  Downtown       Fair   \n",
-       "...    ...   ...       ...        ...     ...        ...       ...        ...   \n",
-       "1995  1996  4994         5          4       3       1923  Suburban       Poor   \n",
-       "1996  1997  3046         5          2       1       2019  Suburban       Poor   \n",
-       "1997  1998  1062         5          1       2       1903     Rural       Poor   \n",
-       "1998  1999  4062         3          1       2       1936     Urban  Excellent   \n",
-       "1999  2000  2989         5          1       3       1903  Suburban       Fair   \n",
-       "\n",
-       "     Garage   Price  \n",
-       "0        No  149919  \n",
-       "1        No  424998  \n",
-       "2        No  266746  \n",
-       "3       Yes  244020  \n",
-       "4       Yes  636056  \n",
-       "...     ...     ...  \n",
-       "1995     No  295620  \n",
-       "1996    Yes  580929  \n",
-       "1997     No  476925  \n",
-       "1998    Yes  161119  \n",
-       "1999     No  482525  \n",
-       "\n",
-       "[2000 rows x 10 columns]>"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 2000 entries, 0 to 1999\n",
+      "Data columns (total 10 columns):\n",
+      " #   Column     Non-Null Count  Dtype \n",
+      "---  ------     --------------  ----- \n",
+      " 0   Id         2000 non-null   int64 \n",
+      " 1   Area       2000 non-null   int64 \n",
+      " 2   Bedrooms   2000 non-null   int64 \n",
+      " 3   Bathrooms  2000 non-null   int64 \n",
+      " 4   Floors     2000 non-null   int64 \n",
+      " 5   YearBuilt  2000 non-null   int64 \n",
+      " 6   Location   2000 non-null   object\n",
+      " 7   Condition  2000 non-null   object\n",
+      " 8   Garage     2000 non-null   object\n",
+      " 9   Price      2000 non-null   int64 \n",
+      "dtypes: int64(7), object(3)\n",
+      "memory usage: 156.4+ KB\n"
+     ]
     }
    ],
    "source": [
-    "df.info"
+    "df.info()"
    ]
   },
   {
@@ -2078,7 +2065,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -2092,7 +2079,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.10.0"
   }
  },
  "nbformat": 4,
