Added IS and ML assignments

--- a/IS/RailFence.ipynb
+++ b/IS/RailFence.ipynb
@@ -1,8 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Rail Fence"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,8 +52,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Columnar cipher"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,30 +69,24 @@
     "    cipher = \"\"\n",
     "    key = \"MONEY\"\n",
     "\n",
-    "    # track key indices\n",
     "    k_indx = 0\n",
     "\n",
     "    msg_len = float(len(msg))\n",
     "    msg_lst = list(msg)\n",
     "    key_lst = sorted(list(key))\n",
     "\n",
-    "    # calculate column of the matrix\n",
     "    col = len(key)\n",
     "\n",
-    "    # calculate maximum row of the matrix\n",
     "    row = int(math.ceil(msg_len / col))\n",
     "\n",
-    "    # add the padding character '_' in empty\n",
-    "    # the empty cell of the matix\n",
     "    fill_null = int((row * col) - msg_len)\n",
     "    msg_lst.extend('_' * fill_null)\n",
     "\n",
-    "    # create Matrix and insert message and\n",
-    "    # padding characters row-wise\n",
+    "\n",
     "    matrix = [msg_lst[i: i + col]\n",
     "              for i in range(0, len(msg_lst), col)]\n",
     "\n",
-    "    # read matrix column-wise using key\n",
+    "\n",
     "    for _ in range(col):\n",
     "        curr_idx = key.index(key_lst[k_indx])\n",
     "        cipher += ''.join([row[curr_idx]\n",
